examples/15.istio-on-gke/cloudsql/mysql/standalone.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-cloudsql-proxy
  namespace: istio-workload
  labels:
    app: mysql-cloudsql-proxy
    version: v1
spec:
  containers:
    # [START proxy_container]
    - name: cloudsql-proxy
      image: gcr.io/cloudsql-docker/gce-proxy:latest
      command:
        [
          "/cloud_sql_proxy",
          "--dir=/cloudsql",
          "-instances=nmiu-play:us-central1:sinatra1=tcp:0.0.0.0:3306",
          "-credential_file=/secrets/cloudsql/cloudsqlclient.json",
        ]
      volumeMounts:
        - name: cloudsql-instance-credentials
          mountPath: /secrets/cloudsql
          readOnly: true
        - name: cloudsql
          mountPath: /cloudsql
      ports:
        - containerPort: 3306
          name: mysql
          protocol: TCP
    # [END proxy_container]
  # [START volumes]
  volumes:
    - name: cloudsql-instance-credentials
      secret:
        secretName: cloudsql-instance-credentials
    - name: cloudsql
      emptyDir:
  # [END volumes]

---
kind: Service
apiVersion: v1
metadata:
  name: mysql-cloudsql-proxy
  namespace: istio-workload
spec:
  selector:
    app: mysql-cloudsql-proxy
  ports:
    - name: mysql
      protocol: TCP
      port: 3306
      targetPort: 3306

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#   name: mysql-cloudsql-proxy
#   namespace: istio-workload
# spec:
#   gateways:
#     - mesh
#   hosts:
#     - mysql-cloudsql-proxy
#   tcp:
#     - match:
#         - port: 3306
#       route:
#         - destination:
#             host: mysql-cloudsql-proxy
#             port:
#               number: 3306

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: mysql-cloudsql-proxy
#   namespace: istio-workload
# spec:
#   host: mysql-cloudsql-proxy
#   trafficPolicy:
#     tls:
#       mode: DISABLE

---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-hammer-standalone
  namespace: istio-workload
spec:
  containers:
    - image: gcr.io/nmiu-play/hammer
      imagePullPolicy: Always
      name: hammer
      resources:
        limits:
          cpu: 500m
          memory: 128Mi
        requests:
          cpu: 100m
          memory: 128Mi
