examples/15.istio-on-gke/cloudsql/mysql/egress_to_cloudsql.yaml
# ---
# # Disable mTLS to the CloudSQL instance
# apiVersion: networking.istio.io/v1alpha3
# kind: DestinationRule
# metadata:
#   name: mysql-cloud-sql-instance
#   namespace: istio-workload
# spec:
#   host: 35.184.231.104
#   trafficPolicy:
#     tls:
#       mode: DISABLE

---
# Add the CloudSQL's external IP to the mesh
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mysql-cloud-sql-instance
  namespace: istio-workload
spec:
  hosts:
    - cloudsql.external
  addresses:
    - 35.184.231.104/32 # a block of IPs in CIDR notation
  ports:
    - name: tcp
      number: 3307 # at the moment, Google Cloud SQL always available on port 3307
      protocol: tcp # enable TCP traffic
  location: MESH_EXTERNAL
